--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,57 @@ html {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.my-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.my-col-1-3 {
+    width: calc(100% / 3);
+}
+
+img {
+    width: 100%;
+    display: block;
+}
+
+/* 
+    MAIN
+*/
+.product-container {
+    padding: 20px;
+    position: relative;
+}
+
+.discount {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 4px;
+    background: green;
+    color: white;
+}
+
+.wishlist {
+    color: red;
+    text-align: center;
+    font-size: 2em;
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+    display: none;
+}
+
+.product-container:hover .wishlist {
+/* .wishlist:hover { */
+    display: block;
+}
+
+/* 
+    DEBUG
+*/
+.debug .my-col-1-3 {
+    background-color: aquamarine;
+}
